--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Services</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contact</a>
+          </li>
         </ul>
       </div>
     </div>
